# ra3map_python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ra3_map/ra3_map/: __init__.py  main.py  ra3map.py
ra3map/: __init__.py  ra3map.py
ra3map/enums/: passability_enum.py  texture_enum.py
ra3map/model/: object_model.py  team_model.py  texture.py
ra3map/models/: object_model.py  player_model.py  team_model.py  waypoint_model.py
