[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ra3map"
version = "0.1.0"
description = "a operator for ra3 map"
readme = "README.md"
authors = [
    { name = "dreamness", email = "dnalm.dreamness@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "requests"
]
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/dreamness-dnalm/ra3map_python"
#Documentation = "https://github.com/yourusername/my_package/wiki"
Repository = "https://github.com/dreamness-dnalm/ra3map_python"
#Issues = "https://github.com/yourusername/my_package/issues"
